# UU-Winding-Visualisation

./: .gitignore  README.md  WindingSimulator.spec  build.py  main.py  pyproject.toml  requirements.txt  test_aspect.py  test_aspect_strict.py  test_box_aspect.py  test_slider.py
data/: .~lock.GenSim16.ods#  .~lock.GenSim16.xlsm#  .~lock.LindningV85.ods#  .~lock.LindningV85.xlsx#  LindningV85.ods  LindningV85.xlsx
docs/: användar guide.md  user guide.md
docs/data/: .~lock.GenSim16.ods#  GenSim16.ods  GenSim16.xlsm
src/winding/: config.py  main.py  start.py
src/winding/assets/lang/: english.toml  swedish.toml
src/winding/gui/: analytics.py  app.py  canvas.py  components.py  console.py  content.py  language.py  theme.py
src/winding/models/: export.py  magnets.py  simulation.py  t.py
src/winding/snippets/: t.py
